--- a/title/src/main/res/layout/title_view.xml
+++ b/title/src/main/res/layout/title_view.xml
@@ -1,60 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                   xmlns:tools="http://schemas.android.com/tools"
-                                   android:id="@+id/toolbar"
-                                   android:layout_width="match_parent"
-                                   android:layout_height="?attr/actionBarSize"
-                                   android:fitsSystemWindows="true"
-                                   app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                                   app:contentInsetLeft="0dp"
-                                   app:contentInsetStart="0dp"
-                                   android:background="#393e46"
-                                   android:focusable="true"
-                                   android:focusableInTouchMode="true">
-    <RelativeLayout android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-        <TextView
-                android:id="@+id/tv_left_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true"
-                android:textSize="16dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:textColor="@android:color/white"
-                android:singleLine="true"
-                android:clickable="true"
-                tools:text="Left"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:fitsSystemWindows="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true">
+    <TextView
+            android:id="@+id/tv_left_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:textSize="16dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:textColor="@android:color/white"
+            android:singleLine="true"
+            android:clickable="true"
+            tools:text="Left"/>
 
-        <TextView
-                android:id="@+id/tv_title_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
-                android:maxEms="10"
-                android:singleLine="true"
-                android:gravity="center"
-                android:ellipsize="end"
-                android:textSize="16dp"
-                android:textColor="@android:color/white"
-                android:clickable="true"
-                tools:text="Title"/>
-        <TextView
-                android:id="@+id/tv_right_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:textColor="@android:color/white"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:singleLine="true"
-                android:clickable="true"
-                android:textSize="16dp"
-                tools:text="Right"/>
+    <TextView
+            android:id="@+id/tv_title_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:maxEms="10"
+            android:singleLine="true"
+            android:ellipsize="end"
+            android:textSize="16dp"
+            android:textColor="@android:color/white"
+            android:clickable="true"
+            tools:text="Title"/>
+    <TextView
+            android:id="@+id/tv_right_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:textColor="@android:color/white"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:singleLine="true"
+            android:clickable="true"
+            android:textSize="16dp"
+            tools:text="Right"/>
 
-    </RelativeLayout>
-</androidx.appcompat.widget.Toolbar>
+</RelativeLayout>
